deps/crates/vendor/serde_json/tests/ui/missing_comma.rs
use serde_json::json;

fn main() {
    json!({ "1": "" "2": "" });
}
